# workflow-templates

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  setup.py  workflow_template_input_files.json
archived/: 2_pass_pose_worship.json  api_pika_i2v.json  api_pika_scene.json  area_composition.json  area_composition_square_area_for_subject.json  controlnet_example.json  depth_controlnet.json  depth_t2i_adapter.json  embedding_example.json  esrgan_example.json  gligen_textbox_example.json  hiresfix_esrgan_workflow.json  hiresfix_latent_workflow.json  image2image.json  image_to_video.json  index.ar.json  index.es.json  index.fr.json  index.ja.json  index.json  index.ko.json  index.pt-BR.json  index.ru.json  index.tr.json  index.zh-TW.json  index.zh.json  inpaint_example.json  inpaint_model_outpainting.json  latent_upscale_different_prompt_model.json  lora.json  lora_multiple.json  mixing_controlnets.json  mochi_text_to_video_example.json
blueprints/: canny_to_image_z_image_turbo.json  image_edit_flux_2_klein_4b.json  image_edit_qwen_2511.json  image_to_video.json  image_to_video_wan_2_2.json  index.schema.json  pose_to_image_z_image_turbo.json  pose_to_video_ltx_2_0.json  text_to_image.json  text_to_image_flux_2_dev.json  text_to_image_z_image_turbo.json  text_to_video.json  text_to_video_wan_2_2.json
docs/: BLUEPRINTS.md  SPEC.md  publishing-workflow-templates.md  reverse-proxy-adr.md
scripts/: README_whitelist.md  analyze_models.py  check_input_assets.md  check_input_assets.py  check_links.py  ci_version_manager.py  fix_subgraph_bypass_modes.py  (+10 more)
(+686 files in other folders)
